# libSGM

./: CMakeLists.txt
sample/bf/: CMakeLists.txt  bf.cpp  bf.hpp  renderer.cpp  renderer.h  stereosgm_bf.cpp  stereosgm_bf_rec.cpp
sample/image/: CMakeLists.txt  stereosgm_image.cpp
sample/movie/: stereosgm_movie.cpp
src/: census.cu  winner_takes_all.cu
